talleres/03/10-ingress/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
spec:
  selector: {app: echo}
  ports:
  - port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
spec:
  selector: {matchLabels: {app: echo}}
  template:
    metadata: {labels: {app: echo}}
    spec:
      containers:
      - name: echo
        image: ealen/echo-server
        ports: [{containerPort: 80}]
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ing
spec:
  ingressClassName: nginx           # matches your ingress controller
  rules:
  - host: echo.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: {name: echo, port: {number: 80}}
